<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="user"
            type="tkhub.project.kesbewa.data.model.User" />

        <variable
            name="singup_google_binding_view"
            type="tkhub.project.kesbewa.viewmodels.login.RegistorViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageview_navigation"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="5dp"
                android:onClick="@{(view) -> singup_google_binding_view.backFromGoogleRegistorToLogin(view)}"
                android:paddingEnd="20dp"
                android:paddingRight="10dp"
                android:src="@mipmap/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/diavlo_light"
                android:text="USER REGISTER"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/babypowder"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageview_navigation" />





        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:alpha=".090"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_guest_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/diavlo_light"
                        android:text="@string/your_name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edittext_1"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:enabled="false"
                        android:background="@color/edittext_background"
                        android:ems="10"
                        android:hint="@string/ex_himanshu_fernando"
                        android:inputType="textPersonName"
                        android:text="@{user.user_name}"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        app:fontFamily="@font/diavlo_light"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_guest_name" />

                    <View
                        android:id="@+id/view_1"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/textcolor0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edittext_1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/diavlo_light"
                        android:text="@string/your_email_address"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_1" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edittext_3"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/edittext_background"
                        android:ems="10"
                        android:enabled="false"
                        android:hint="@string/ex_abc_gmail_com"
                        android:inputType="textEmailAddress"
                        android:text="@{user.user_email}"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        app:fontFamily="@font/diavlo_light"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_3" />


                    <View
                        android:id="@+id/view_3"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/textcolor0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edittext_3" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/diavlo_light"
                        android:text="@string/your_contact_number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_3" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edittext_2"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/edittext_background"
                        android:ems="10"
                        android:hint="@string/ex_0737788888"
                        android:inputType="phone"
                        android:text="@={singup_google_binding_view.editTextGoogleNumber}"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        app:fontFamily="@font/diavlo_light"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_2" />


                    <View
                        android:id="@+id/view_2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/textcolor0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edittext_2" />



                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textview_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/diavlo_light"
                        android:text="@string/your_nic_number"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view_2" />


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edittext_4"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/edittext_background"
                        android:ems="10"
                        android:hint="Ex :892631093V / 198926301093"
                        android:inputType="text"
                        android:text="@={singup_google_binding_view.editTextGoogleNic}"
                        android:textColor="@color/textcolor0"
                        android:textSize="14sp"
                        app:fontFamily="@font/diavlo_light"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textview_4" />


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/view_6"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edittext_4" >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_65"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/by_verifying_your_identity"
                            android:textColor="@color/textcolor0"
                            android:textSize="12sp"
                            android:layout_marginTop="10dp"
                            app:fontFamily="@font/diavlo_light"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_terms_conditions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions"
                            android:textColor="@color/textcolor0"
                            android:textSize="12sp"
                            android:padding="10dp"
                            app:fontFamily="@font/diavlo_light"
                            app:layout_constraintTop_toBottomOf="@+id/txt_65"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>




        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_btn_complete"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/diavlo_light"
            android:inputType="textCapCharacters"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/bg_btn_pink"
            android:gravity="center"
            android:text="COMPLETE"
            android:textColor="@color/babypowder"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_loading_guestusersave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:visibility="@{singup_google_binding_view.googleSignInProgress ? View.VISIBLE : View.GONE}"
            android:background="#CC000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <com.tuyenmonkey.mkloader.MKLoader
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:mk_color="@color/babypowder"
                app:mk_type="Whirlpool" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>